[package]
name = "yolk-keyboard-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3" # For log formatting and filtering
core-foundation = "0.10.0"
windows = "0.59.0"
uinput = "0.1.3"
futures = "0.3"
futures-util = "0.3"
log = "0.4.25"
env_logger = "0.11.6"
input-linux = "0.7.1"
